# Liesel

./: .gitignore  CORTEX_AI.SQL  Liesel_Fuel_History.json  README.md  liesel_app.py  processing.py  pyproject.toml  requirements.txt  snowflake_proj_setup.sql  test.ipynb
