[project]
name = "liesel"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "fredapi>=0.5.2",
    "matplotlib>=3.10.5",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "piecewise-regression>=1.5.0",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "streamlit>=1.48.1",
    "streamlit-folium>=0.25.1",
    "streamlit-option-menu>=0.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=8.37.0",
]
